# proj-CAUala

./: .dockerignore  .gitignore  CONCEPTS.md  Dockerfile  IMPLEMENTATION.md  MEMO.md  Procfile  README.md  build-brief.md  fly.toml  memo.md  pyproject.toml  render.yaml  requirements.txt
demo/: index.html
deploy/: huggingface-space-README.md
docs/: CAUala-critique.md  CONNECTORS.md  Causal_Data_Source_Catalog.md  Causal_Evidence_Report_Spec.md  DEPLOY.md  IMPLEMENTATION.md  README.md  build-brief.md
examples/: demo.py
registry/: curated_evidence.yaml  evidence_stacks.yaml
reports/: _live_sort1.html  amyloid_ad.html  amyloid_ad.json  amyloid_ad.md  crp_cad.html  crp_cad.json  crp_cad.md  hdl_cad.html  hdl_cad.json  hdl_cad.md  lrrk2_pd.html  lrrk2_pd.md  pcsk9_cad.html  pcsk9_cad.json  pcsk9_cad.md  tau_ad.html  tau_ad.json  tau_ad.md
schemas/: Context.json  DimensionAssessment.json  EvidenceItem.json  InusVerdict.json  Posterior.json  Question.json  TargetAppraisal.json
scoring/: rubric.yaml
src/: cli.py  exemplars.py  export_schemas.py  harmonization.py  orchestrator.py  provenance.py  question.py  report.py  resolve.py  schema.py  scoring.py  scoring_engine.py  validation.py  webapp.py
src/causala/: __init__.py  causal_matrix.py  causal_tree.py  ci_tests.py  datasets.py  metrics.py
src/connectors/: base.py  (+6 more)
submission/: DEMO_TRANSCRIPT.md  HOW_I_USED_CLAUDE.md
tests/: test_causal_matrix.py  test_causal_tree.py  test_ci_tests.py  test_datasets.py  test_knowledge.py  test_known_answers.py  test_live.py  test_metrics.py  test_pipeline.py  test_webapp.py
