[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "causala"
version = "0.1.0"
description = "Climbing the causal tree: telling causation from correlation in biological data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "proj-CAUala" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
demo = ["matplotlib>=3.7", "scikit-learn>=1.3"]
dev = ["pytest>=7.0", "matplotlib>=3.7", "scikit-learn>=1.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
